CERE Gain: $ 2.02 Win %: 100.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3
CERE Gain: $ -3.78 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_RV
CERE Gain: $ -3.44 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_IR2
CERE Gain: $ -7.92 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_TR
CERE Gain: $ 4.87 Win %: 100.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_AV
CERE Gain: $ -2.07 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_VI
CERE Gain: $ -3.64 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_AL
CERE Gain: $ -6.11 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_LI
CERE Gain: $ -3.41 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_QP
CERE Gain: $ -5.21 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_HM
CERE Gain: $ -2.63 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_SS
CERE Gain: $ -2.09 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_QL
CERE Gain: $ -2.63 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_DB8
CERE Gain: $ -5 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_TR_IR2
CERE Gain: $ -3.41 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_TR_QP
CERE Gain: $ -5.71 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_QP_IR2
CERE Gain: $ -8.03 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_RV_TR
CERE Gain: $ -8.03 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_RV_TR_DB2
CERE Gain: $ -3.46 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_RV_AV
CERE Gain: $ -3.9 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_RV_AL
CERE Gain: $ -2.61 Win %: 50.00 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_RV_QP
CERE Gain: $ -10.17 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_HM_TR
CERE Gain: $ -5.41 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_HM_AV
CERE Gain: $ -5.99 Win %: 0 in 2 days with algo TB4_CC_QM_OB5_OS5_CB3_CS3_HM_QP
CERE Gain: $ -1.72 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV
CERE Gain: $ 5.74 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IR5
CERE Gain: $ -1.24 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR
CERE Gain: $ -3.89 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AV
CERE Gain: $ 2.23 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_VI
CERE Gain: $ 5.38 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AL
CERE Gain: $ 0.42 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_LI
CERE Gain: $ 1.16 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP
CERE Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM
CERE Gain: $ 1.07 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_SS
CERE Gain: $ 3.11 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QL
CERE Gain: $ 4.12 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_DB30
CERE Gain: $ 4.13 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_IR5
CERE Gain: $ -6.58 Win %: 0 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_QP
CERE Gain: $ -1.79 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP_IR5
CERE Gain: $ 3.02 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_TR
CERE Gain: $ 3.02 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_TR_DB5
CERE Gain: $ -3.1 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AV
CERE Gain: $ 2.22 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AL
CERE Gain: $ 1.16 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_QP
CERE Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_TR
CERE Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_AV
CERE Gain: $ 1.15 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_QP
CERE Gain: $ 0.6 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV
CERE Gain: $ 5 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IR5
CERE Gain: $ 3.82 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR
CERE Gain: $ 4.32 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV
CERE Gain: $ 2.23 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_VI
CERE Gain: $ 5.38 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL
CERE Gain: $ -2.63 Win %: 0 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_LI
CERE Gain: $ -2.23 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP
CERE Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM
CERE Gain: $ 0.99 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_SS
CERE Gain: $ 3.11 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QL
CERE Gain: $ 4.12 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_DB30
CERE Gain: $ 4.13 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_IR5
CERE Gain: $ -2.06 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP
CERE Gain: $ -0.24 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_IR5
CERE Gain: $ 3.02 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR
CERE Gain: $ 3.02 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB5
CERE Gain: $ -3.14 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV
CERE Gain: $ 2.22 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL
CERE Gain: $ -2.8 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP
CERE Gain: $ -1.78 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR
CERE Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV
CERE Gain: $ -1.9 Win %: 50.00 in 2 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP
CERE Gain: $ 0.6 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_RV
CERE Gain: $ 5 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_IR5
CERE Gain: $ 3.82 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_TR
CERE Gain: $ 4.32 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_AV
CERE Gain: $ 2.23 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_VI
CERE Gain: $ 5.38 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_AL
CERE Gain: $ 0.68 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_LI
CERE Gain: $ -2.23 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_QP
CERE Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_HM
CERE Gain: $ 0.99 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_SS
CERE Gain: $ 2.96 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_QL
CERE Gain: $ 4.12 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_DB30
CERE Gain: $ 4.13 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_TR_IR5
CERE Gain: $ -2.06 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP
CERE Gain: $ -1.55 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_QP_IR5
CERE Gain: $ 3.02 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR
CERE Gain: $ 3.02 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB5
CERE Gain: $ -3.14 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV
CERE Gain: $ 2.22 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AL
CERE Gain: $ -2.8 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP
CERE Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR
CERE Gain: $ -3.22 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV
CERE Gain: $ -1.9 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP
CERE Gain: $ -1.9 Win %: 50.00 in 2 days with algo TB1_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP
CERE Gain: $ 3.65 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4
CERE Gain: $ 2.59 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV
CERE Gain: $ 5.96 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IR5
CERE Gain: $ 5.41 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR
CERE Gain: $ 2.81 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AV
CERE Gain: $ 2.83 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_VI
CERE Gain: $ 6 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AL
CERE Gain: $ 2.42 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_LI
CERE Gain: $ -1.67 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP
CERE Gain: $ 3.85 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM
CERE Gain: $ 2.36 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_SS
CERE Gain: $ 1.74 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QL
CERE Gain: $ 6.11 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_DB30
CERE Gain: $ 4.65 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_IR5
CERE Gain: $ -2.87 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_QP
CERE Gain: $ -4.18 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP_IR5
CERE Gain: $ 4.61 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_TR
CERE Gain: $ 4.61 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_TR_DB5
CERE Gain: $ -2.55 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AV
CERE Gain: $ 4.14 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AL
CERE Gain: $ 1.72 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_QP
CERE Gain: $ 3.65 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_TR
CERE Gain: $ 1.82 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_AV
CERE Gain: $ 0.97 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_QP
CERE Gain: $ 2.01 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV
CERE Gain: $ 6.25 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IR5
CERE Gain: $ 5.15 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR
CERE Gain: $ 2.78 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AV
CERE Gain: $ 3.95 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_VI
CERE Gain: $ 3.98 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AL
CERE Gain: $ 4.86 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_LI
CERE Gain: $ -1.88 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QP
CERE Gain: $ 6.53 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM
CERE Gain: $ 4.59 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_SS
CERE Gain: $ -0.67 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QL
CERE Gain: $ 6.1 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_DB30
CERE Gain: $ 5.34 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR_IR5
CERE Gain: $ -1.9 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP
CERE Gain: $ -4.18 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QP_IR5
CERE Gain: $ 2.8 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR
CERE Gain: $ 2.8 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB5
CERE Gain: $ -8.43 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV
CERE Gain: $ -3.94 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL
CERE Gain: $ -0.1 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP
CERE Gain: $ 6.49 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR
CERE Gain: $ 3.87 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV
CERE Gain: $ -2.4 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP
CERE Gain: $ 2.59 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV
CERE Gain: $ 6.25 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IR5
CERE Gain: $ 5.41 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR
CERE Gain: $ 2.81 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV
CERE Gain: $ 2.83 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_VI
CERE Gain: $ 7.3 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL
CERE Gain: $ 2.68 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_LI
CERE Gain: $ -3.95 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP
CERE Gain: $ 3.85 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM
CERE Gain: $ 2.84 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_SS
CERE Gain: $ 5.1 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QL
CERE Gain: $ 6.11 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_DB30
CERE Gain: $ 5.34 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_IR5
CERE Gain: $ -1.49 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP
CERE Gain: $ -4.18 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_IR5
CERE Gain: $ 4.61 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR
CERE Gain: $ 4.61 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB5
CERE Gain: $ -2.96 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV
CERE Gain: $ 4.14 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL
CERE Gain: $ -2.24 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP
CERE Gain: $ 3.65 Win %: 100.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR
CERE Gain: $ 1.82 Win %: 66.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV
CERE Gain: $ -3.77 Win %: 33.00 in 3 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP
CERE Gain: $ 2.39 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_RV
CERE Gain: $ 6.25 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_IR5
CERE Gain: $ 5.21 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_TR
CERE Gain: $ 2.61 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_AV
CERE Gain: $ 2.83 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_VI
CERE Gain: $ 7.1 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_AL
CERE Gain: $ 3.37 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_LI
CERE Gain: $ -4.11 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_QP
CERE Gain: $ 3.85 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_HM
CERE Gain: $ 2.64 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_SS
CERE Gain: $ 4.9 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_QL
CERE Gain: $ 6.35 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_DB30
CERE Gain: $ 5.34 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_TR_IR5
CERE Gain: $ -4.98 Win %: 0 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_TR_QP
CERE Gain: $ -4.18 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_QP_IR5
CERE Gain: $ 4.41 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_RV_TR
CERE Gain: $ 4.41 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_RV_TR_DB5
CERE Gain: $ -1.95 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_RV_AV
CERE Gain: $ 3.94 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_RV_AL
CERE Gain: $ -2.37 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_RV_QP
CERE Gain: $ 3.65 Win %: 100.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_HM_TR
CERE Gain: $ 1.82 Win %: 66.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_HM_AV
CERE Gain: $ -3.93 Win %: 33.00 in 3 days with algo TB1_HL_HI_QM_OB4_OS4_CB1_CS1_HM_QP
