CERE Gain: $ 3.01 Win %: 100.00 in 5 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TS
CERE Gain: $ 12.67 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4
CERE Gain: $ -8.16 Win %: 16.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_QP_DB30
CERE Gain: $ 0.46 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_TR_DB30
CERE Gain: $ 4.03 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AV_DB30
CERE Gain: $ 6.72 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AL_DB30
CERE Gain: $ -14.89 Win %: 16.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_QP_DB30
CERE Gain: $ 0.09 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_TR_DB30
CERE Gain: $ 4.63 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_AV_DB30
CERE Gain: $ -13.87 Win %: 0 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_QP_DB30
CERE Gain: $ 1.76 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IT_QL_DB30
CERE Gain: $ -3.77 Win %: 33.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IT_QP_DB30
CERE Gain: $ 1.5 Win %: 50.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_IR5
CERE Gain: $ -6.22 Win %: 33.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_QP
CERE Gain: $ -17.62 Win %: 0 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP_IR5
CERE Gain: $ 6.78 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_TR
CERE Gain: $ 9.88 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AV
CERE Gain: $ 6.64 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_AL
CERE Gain: $ -4.49 Win %: 50.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV_QP
CERE Gain: $ 9.19 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_TR
CERE Gain: $ 6.01 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_AV
CERE Gain: $ 9.41 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_AL
CERE Gain: $ -7.49 Win %: 33.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM_QP
CERE Gain: $ 10.55 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IT_QL
CERE Gain: $ -2.14 Win %: 0 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IT_QP
CERE Gain: $ -1.1 Win %: 50.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AO_AC
CERE Gain: $ 0.12 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP_PM
CERE Gain: $ 3.6 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR_TS
CERE Gain: $ 3.74 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_RV
CERE Gain: $ 1.54 Win %: 50.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IR5
CERE Gain: $ 12.02 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TR
CERE Gain: $ 10.94 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AV
CERE Gain: $ 11.24 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AL
CERE Gain: $ 10.08 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_VI
CERE Gain: $ 7.14 Win %: 50.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_LI
CERE Gain: $ -8.26 Win %: 33.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QP
CERE Gain: $ 9.32 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_HM
CERE Gain: $ 9.83 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_SS
CERE Gain: $ 10.2 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_QL
CERE Gain: $ 4.59 Win %: 83.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_DB30
CERE Gain: $ 3.68 Win %: 50.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AO
CERE Gain: $ 4.75 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_AC
CERE Gain: $ 10.38 Win %: 66.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_IT
CERE Gain: $ 8.68 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_PM
CERE Gain: $ 3.6 Win %: 100.00 in 6 days with algo TB1_HL_HS_QM_OB2_OS2_CB4_CS4_TS
CERE Gain: $ -9.3 Win %: 0 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_TR_QP_DB8
CERE Gain: $ 0.25 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_TR_DB8
CERE Gain: $ -3.05 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AV_DB8
CERE Gain: $ 2.1 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AL_DB8
CERE Gain: $ -15.06 Win %: 0 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_QP_DB8
CERE Gain: $ -2.45 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_TR_DB8
CERE Gain: $ -5.08 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_AV_DB8
CERE Gain: $ -18.51 Win %: 0 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_QP_DB8
CERE Gain: $ -2.56 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QL_DB8
CERE Gain: $ -2.55 Win %: 0 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QP_DB8
CERE Gain: $ -0.76 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_TR_IR2
CERE Gain: $ -12.03 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_TR_QP
CERE Gain: $ -2.29 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_QP_IR2
CERE Gain: $ -4.01 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_TR
CERE Gain: $ 3.5 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AV
CERE Gain: $ 7.17 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_AL
CERE Gain: $ -4.05 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV_QP
CERE Gain: $ -7.75 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_TR
CERE Gain: $ -7.42 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_AV
CERE Gain: $ -5.62 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_AL
CERE Gain: $ -10.51 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM_QP
CERE Gain: $ 5.38 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QL
CERE Gain: $ -0.24 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_IT_QP
CERE Gain: $ -1.99 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_AO_AC
CERE Gain: $ 0.58 Win %: 100.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_QP_PM
CERE Gain: $ -9.01 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_TR_TS
CERE Gain: $ -9.61 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_RV
CERE Gain: $ 4.51 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_IR2
CERE Gain: $ -0.23 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_TR
CERE Gain: $ 3.88 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_AV
CERE Gain: $ 7.67 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_AL
CERE Gain: $ -2.46 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_VI
CERE Gain: $ 3.98 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_LI
CERE Gain: $ -4.35 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_QP
CERE Gain: $ -23.88 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_HM
CERE Gain: $ -1.9 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_SS
CERE Gain: $ 5.38 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_QL
CERE Gain: $ -7.75 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_DB8
CERE Gain: $ -1.99 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_AO
CERE Gain: $ -1.99 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_AC
CERE Gain: $ 5.01 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_IT
CERE Gain: $ 4.78 Win %: 83.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_PM
CERE Gain: $ -8.24 Win %: 83.00 in 6 days with algo TB4_EO_EC_QM_OB2_OS2_CB4_CS4_TS
CERE Gain: $ 1.42 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_TR_QP_DB15
CERE Gain: $ -1.96 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_TR_DB15
CERE Gain: $ -4.96 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_AV_DB15
CERE Gain: $ -3.41 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_AL_DB15
CERE Gain: $ -12.11 Win %: 16.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_QP_DB15
CERE Gain: $ 3.16 Win %: 83.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_TR_DB15
CERE Gain: $ -3.37 Win %: 66.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_AV_DB15
CERE Gain: $ -7.28 Win %: 0 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_QP_DB15
CERE Gain: $ -1.44 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_IT_QL_DB15
CERE Gain: $ -2.3 Win %: 16.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_IT_QP_DB15
CERE Gain: $ 0.64 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_TR_IR4
CERE Gain: $ -2.7 Win %: 16.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_TR_QP
CERE Gain: $ -1.1 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_QP_IR4
CERE Gain: $ 1.69 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_TR
CERE Gain: $ 0.58 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_AV
CERE Gain: $ 1.01 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_AL
CERE Gain: $ -12 Win %: 16.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV_QP
CERE Gain: $ 4.04 Win %: 66.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_TR
CERE Gain: $ 7.05 Win %: 83.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_AV
CERE Gain: $ 5.22 Win %: 66.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_AL
CERE Gain: $ -9.72 Win %: 0 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM_QP
CERE Gain: $ 3.2 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_IT_QL
CERE Gain: $ -1.35 Win %: 0 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_IT_QP
CERE Gain: $ 4.04 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_AO_AC
CERE Gain: $ -0.8 Win %: 66.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_QP_PM
CERE Gain: $ -1.47 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_TR_TS
CERE Gain: $ -1.33 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_RV
CERE Gain: $ -0.08 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_IR4
CERE Gain: $ 2.94 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_TR
CERE Gain: $ 4.2 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_AV
CERE Gain: $ 3.32 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_AL
CERE Gain: $ 1.96 Win %: 16.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_VI
CERE Gain: $ -0.28 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_LI
CERE Gain: $ -6.05 Win %: 16.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_QP
CERE Gain: $ 4.22 Win %: 66.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_HM
CERE Gain: $ 4.04 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_SS
CERE Gain: $ 2.56 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_QL
CERE Gain: $ 3.62 Win %: 66.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_DB15
CERE Gain: $ 4.04 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_AO
CERE Gain: $ 4.04 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_AC
CERE Gain: $ 3.67 Win %: 33.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_IT
CERE Gain: $ 7.05 Win %: 83.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_PM
CERE Gain: $ -0.57 Win %: 50.00 in 6 days with algo TB2_EO_EC_QM_OB3_OS3_CB5_CS5_TS
CERE Gain: $ -11.89 Win %: 0 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_TR_QP_DB8
CERE Gain: $ 0.25 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_TR_DB8
CERE Gain: $ -4.14 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AV_DB8
CERE Gain: $ -0.29 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AL_DB8
CERE Gain: $ -9.98 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_QP_DB8
CERE Gain: $ -5.02 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_TR_DB8
CERE Gain: $ -3.02 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_AV_DB8
CERE Gain: $ -14.73 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_QP_DB8
CERE Gain: $ -1.49 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QL_DB8
CERE Gain: $ -1.45 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QP_DB8
CERE Gain: $ 5.62 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_TR_IR2
CERE Gain: $ -12.03 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_TR_QP
CERE Gain: $ -3.17 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_QP_IR2
CERE Gain: $ 0.06 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_TR
CERE Gain: $ 3.5 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AV
CERE Gain: $ 7.17 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_AL
CERE Gain: $ -2.93 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV_QP
CERE Gain: $ -7.75 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_TR
CERE Gain: $ -6.8 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_AV
CERE Gain: $ -2.98 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_AL
CERE Gain: $ -11.26 Win %: 16.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM_QP
CERE Gain: $ 5.38 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QL
CERE Gain: $ -0.24 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_IT_QP
CERE Gain: $ -5.27 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_AO_AC
CERE Gain: $ 0.58 Win %: 100.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_QP_PM
CERE Gain: $ -7.2 Win %: 83.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_TR_TS
CERE Gain: $ -9.04 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_RV
CERE Gain: $ 4.51 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_IR2
CERE Gain: $ -0.31 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_TR
CERE Gain: $ 1.65 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_AV
CERE Gain: $ 7.67 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_AL
CERE Gain: $ -1.29 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_VI
CERE Gain: $ 4.63 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_LI
CERE Gain: $ -2.38 Win %: 33.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_QP
CERE Gain: $ -9.53 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_HM
CERE Gain: $ -1.9 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_SS
CERE Gain: $ 3 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_QL
CERE Gain: $ -2.04 Win %: 50.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_DB8
CERE Gain: $ -1.99 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_AO
CERE Gain: $ -3.57 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_AC
CERE Gain: $ 5.01 Win %: 66.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_IT
CERE Gain: $ 4.78 Win %: 83.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_PM
CERE Gain: $ -8.24 Win %: 83.00 in 6 days with algo TB4_EO_EC_QM_OB1_OS1_CB4_CS4_TS
