CIEN Gain: $ 5.51 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5
CIEN Gain: $ -4.47 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -7.08 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -2.66 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -5.62 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -9.31 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -3.98 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
CIEN Gain: $ -3.48 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -9.09 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -3.14 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -3.95 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 5.39 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR3
CIEN Gain: $ -2.41 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
CIEN Gain: $ 0.38 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR3
CIEN Gain: $ -5.73 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
CIEN Gain: $ 1.27 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
CIEN Gain: $ -2.03 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
CIEN Gain: $ -11.99 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
CIEN Gain: $ -4.94 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
CIEN Gain: $ -1.01 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
CIEN Gain: $ -2.08 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AL
CIEN Gain: $ -9.14 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
CIEN Gain: $ -0.07 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
CIEN Gain: $ -0.73 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
CIEN Gain: $ -37.11 Win %: 22.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
CIEN Gain: $ 1.75 Win %: 83.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
CIEN Gain: $ -4.49 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV
CIEN Gain: $ 5.56 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IR3
CIEN Gain: $ 5.34 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR
CIEN Gain: $ 1.81 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AV
CIEN Gain: $ 6.06 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AL
CIEN Gain: $ -1.21 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_VI
CIEN Gain: $ 3.45 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_LI
CIEN Gain: $ -1.7 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP
CIEN Gain: $ -0.63 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM
CIEN Gain: $ 6.21 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_SS
CIEN Gain: $ 2.72 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QL
CIEN Gain: $ 2.02 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_DB10
CIEN Gain: $ 5.62 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AO
CIEN Gain: $ -20.37 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AC
CIEN Gain: $ -0.07 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT
CIEN Gain: $ 4.67 Win %: 77.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_PM
CIEN Gain: $ 5.52 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TS
CIEN Gain: $ -4.47 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -5.49 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -2.66 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -5.62 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -9.31 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -3.98 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
CIEN Gain: $ -3.48 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -9.09 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -3.14 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -3.95 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 5.39 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR3
CIEN Gain: $ -2.41 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
CIEN Gain: $ -0.08 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR3
CIEN Gain: $ -5.73 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
CIEN Gain: $ 1.27 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
CIEN Gain: $ -2.03 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
CIEN Gain: $ -11.99 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
CIEN Gain: $ -4.94 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
CIEN Gain: $ -1.01 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
CIEN Gain: $ -2.08 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AL
CIEN Gain: $ -9.14 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
CIEN Gain: $ -0.07 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
CIEN Gain: $ -0.73 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
CIEN Gain: $ -37.11 Win %: 22.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
CIEN Gain: $ 1.75 Win %: 83.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
CIEN Gain: $ -4.49 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV
CIEN Gain: $ 5.56 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IR3
CIEN Gain: $ 5.34 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR
CIEN Gain: $ 1.81 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AV
CIEN Gain: $ 6.06 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AL
CIEN Gain: $ -1.21 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_VI
CIEN Gain: $ 3.45 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_LI
CIEN Gain: $ -1.91 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP
CIEN Gain: $ -0.63 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM
CIEN Gain: $ 6.21 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_SS
CIEN Gain: $ 2.72 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QL
CIEN Gain: $ 2.02 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_DB10
CIEN Gain: $ 5.62 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AO
CIEN Gain: $ -20.37 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AC
CIEN Gain: $ -0.07 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT
CIEN Gain: $ 4.67 Win %: 77.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_PM
CIEN Gain: $ 5.52 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TS
CIEN Gain: $ -1.64 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -5.26 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -3.45 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -5.24 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -4.46 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -5.2 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
CIEN Gain: $ 1.53 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -4.6 Win %: 33.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -4.24 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -4.42 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 2.48 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR3
CIEN Gain: $ 0.33 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
CIEN Gain: $ -2.42 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR3
CIEN Gain: $ -3.16 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
CIEN Gain: $ -0.58 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
CIEN Gain: $ -2.41 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
CIEN Gain: $ -6.66 Win %: 22.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
CIEN Gain: $ -2.97 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
CIEN Gain: $ 3.74 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
CIEN Gain: $ 3.11 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
CIEN Gain: $ -5.21 Win %: 27.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
CIEN Gain: $ -1.58 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
CIEN Gain: $ -1.9 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
CIEN Gain: $ -39.49 Win %: 22.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
CIEN Gain: $ -0.35 Win %: 88.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
CIEN Gain: $ -3.22 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV
CIEN Gain: $ 2.65 Win %: 55.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IR3
CIEN Gain: $ 3.7 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR
CIEN Gain: $ Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AV
CIEN Gain: $ 4.38 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AL
CIEN Gain: $ 0.16 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_VI
CIEN Gain: $ 2.88 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_LI
CIEN Gain: $ -2.71 Win %: 50.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP
CIEN Gain: $ 2.25 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM
CIEN Gain: $ 3.62 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_SS
CIEN Gain: $ 1.08 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QL
CIEN Gain: $ 0.7 Win %: 61.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_DB10
CIEN Gain: $ 7.2 Win %: 72.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AO
CIEN Gain: $ 2.07 Win %: 44.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AC
CIEN Gain: $ -1.58 Win %: 38.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT
CIEN Gain: $ 4.15 Win %: 88.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_PM
CIEN Gain: $ 4.11 Win %: 66.00 in 18 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TS
CIEN Gain: $ -3.19 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_TR_QP_DB30
CIEN Gain: $ -5.74 Win %: 33.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_TR_DB30
CIEN Gain: $ -3.49 Win %: 33.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_AV_DB30
CIEN Gain: $ 1.86 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_AL_DB30
CIEN Gain: $ -0.9 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_QP_DB30
CIEN Gain: $ -5.83 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_TR_DB30
CIEN Gain: $ -4.32 Win %: 38.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_AV_DB30
CIEN Gain: $ -1.21 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_QP_DB30
CIEN Gain: $ -1.13 Win %: 38.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_IT_QL_DB30
CIEN Gain: $ -0.94 Win %: 66.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_IT_QP_DB30
CIEN Gain: $ -4.63 Win %: 33.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_TR_IR5
CIEN Gain: $ -3.32 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_TR_QP
CIEN Gain: $ -2 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_QP_IR5
CIEN Gain: $ -4.04 Win %: 33.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_TR
CIEN Gain: $ -2.09 Win %: 38.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_AV
CIEN Gain: $ -0.1 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_AL
CIEN Gain: $ -1.94 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV_QP
CIEN Gain: $ -4.1 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_TR
CIEN Gain: $ -4.01 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_AV
CIEN Gain: $ 1.05 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_AL
CIEN Gain: $ -1.33 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM_QP
CIEN Gain: $ -0.87 Win %: 38.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_IT_QL
CIEN Gain: $ -1.14 Win %: 61.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_IT_QP
CIEN Gain: $ 3.42 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_AO_AC
CIEN Gain: $ 0.06 Win %: 94.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_QP_PM
CIEN Gain: $ -1.21 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_RV
CIEN Gain: $ 4.26 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_IR5
CIEN Gain: $ -2.75 Win %: 44.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_TR
CIEN Gain: $ -1.42 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_AV
CIEN Gain: $ 2.6 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_AL
CIEN Gain: $ 1.54 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_VI
CIEN Gain: $ 2.66 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_LI
CIEN Gain: $ -0.2 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_QP
CIEN Gain: $ 1.75 Win %: 50.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_HM
CIEN Gain: $ 3.35 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_SS
CIEN Gain: $ 4.49 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_QL
CIEN Gain: $ 2.89 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_DB30
CIEN Gain: $ 3.42 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_AO
CIEN Gain: $ 3.42 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_AC
CIEN Gain: $ -0.94 Win %: 38.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_IT
CIEN Gain: $ 2.74 Win %: 94.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_PM
CIEN Gain: $ 0.99 Win %: 55.00 in 18 days with algo TB1_OC_QM_OB5_OS5_CB4_CS4_TS
